--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@
   }
   
   
-  button.hidden{
+  button.hidden {
     display: none;
   }
   
@@ -44,13 +44,11 @@
     height: 210px;
   }
   
-  .info{
+  .info {
     padding: 0px 10px 13px;
     margin-top: 10px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+    gap: 5px;
     text-align: center;}
     
     .info-item {
@@ -59,7 +57,7 @@
       line-height: 1.1;
     }
     
-    .load-more{
+    .load-more {
       background-color: lightseagreen;
       padding: 10px 15px;
       width: 130px;
@@ -79,12 +77,14 @@
     .load-more:hover{
       background-color: lightskyblue;
     } 
-   .container {
+
+    .container {
     background-color: black;
     display: flex;
     margin-bottom: 10px;
     padding: 20px;
-   }
+    }
+
     .search-form {
       display: flex;
       gap: 30px;
@@ -92,21 +92,21 @@
       max-width: 400px;
     }
     
-    .form-input {
+    search-form input {
       border: none;
       padding: 15px;
       font-size: 16px;
       background-color: transparent;
     }
   
-    search-form input:focus {
+    .search-form input:focus {
       outline: none;
     }
     
     .search-btn {
         background-color: lightseagreen;
-        padding: 10px 15px;
-        width: 130px;
+        padding: 15px 15px;
+        width: 100px;
         font-size: 17px;
         font-weight: 300;
         color: white;
